# sqliteimport

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CITATION.cff  LICENSE.txt  README.rst  demo.py  generate-sample.py  pyproject.toml  tox.ini
.github/workflows/: prep-release.yaml  test.yaml
assets/: generate-perftest-directory.py  test-performance.ps1  test-performance.sh  validate-readme-banner-url.py
assets/performance/: __init__.py  __main__.py  clean.py  collect.py  compile.py  generate.py  plot.py  run.py
assets/performance/site_customizer/: README.rst  sitecustomize.py
changelog.d/: 20240523_085429_kurtmckee_add_cli.rst  20240524_065900_kurtmckee_performance_testing.rst  20240524_070226_kurtmckee_performance_testing.rst  20240605_103330_kurtmckee_address_resourcewarnings.rst  20240605_222619_kurtmckee_add_ci.rst  20241027_173835_kurtmckee_fix_fullnames.rst  20241028_084224_kurtmckee_dao.rst  20241028_183138_kurtmckee_include_metadata.rst  20241029_234739_kurtmckee_test_bundling.rst  20241030_004631_kurtmckee_test_bundling.rst  20241107_093906_kurtmckee_maintain_banner_in_readme.rst  20241122_091407_kurtmckee_support_importlib_resources.rst  20241122_094350_kurtmckee_updates.rst  20241126_082935_kurtmckee_binary_files.rst  20241202_080501_kurtmckee_unicode_filenames.rst  20241202_090256_kurtmckee_unicode_filenames.rst  20250127_214811_kurtmckee_auto_prs.rst  20250202_211048_kurtmckee_auto_load_python_path.rst  20250206_080915_kurtmckee_update_build_system.rst  20250209_152143_kurtmckee_colophon.rst  20250210_114254_kurtmckee_dirhtml.rst  20250210_114922_kurtmckee_pypi_links.rst  20250211_091233_kurtmckee_poetry_2.rst  20250212_123430_kurtmckee_perftest.rst  20250215_093600_kurtmckee_bytecode.rst  20250216_104515_kurtmckee_windows_perftest.rst  20250217_174015_kurtmckee_better_bytecode.rst  20250218_070335_kurtmckee_compression.rst  20250219_082035_kurtmckee_more_compat.rst  20250307_143102_kurtmckee_describe.rst  20250310_081717_kurtmckee_describe.rst  20250313_063651_kurtmckee_update_describe.rst  20250318_075435_kurtmckee_namespace_packages.rst  20250319_072450_kurtmckee_module_attributes.rst  20250325_090219_kurtmckee_tracebacks.rst  20250512_131158_kurtmckee_citations.rst  20250512_213437_kurtmckee_guard_non_cli_execution.rst  20250514_090513_kurtmckee_raise_file_not_found.rst  20250515_073520_kurtmckee_fix_find_distributions_lacking_a_name.rst  20250520_091004_kurtmckee_perf_test_fixes_linux.rst  (+16 more)
docs/: bytecode.rst  changelog.rst  colophon.rst  conf.py  index.rst  load.rst
docs/_templates/: about-no-logo.html.jinja  about.html.jinja
docs/flake8/: example.py  index.rst
docs/flake8/assets/: example-noqa.py
docs/isort/: example-bad-sort.py  index.rst
docs/isort/assets/custom-section/: config.ini  config.toml
docs/isort/assets/force-to-top/: config.ini  config.toml  sorted.py
docs/load/: index.rst
docs/load/assets/: automatic.ps1  automatic.sh
docs/ruff/: index.rst
docs/ruff/assets/F401/: example.py  ruff.toml
docs/ruff/assets/custom-section/: pyproject.toml  ruff.toml  sorted.py
docs/ruff/assets/force-to-top/: pyproject.toml  ruff.toml
requirements/: README.rst
requirements/docs/: requirements.txt
requirements/docs-integrations/: pyproject.toml  requirements.txt
requirements/mypy/: pyproject.toml  requirements.txt
requirements/regenerate-test-projects/: pyproject.toml  requirements.txt
requirements/test/: pyproject.toml  requirements.txt
src/sqliteimport/: __init__.py  __main__.py  accessor.py  bundler.py  cli.py  compat.py  compiler.py  errors.py  importer.py  injector-template.py  injector.py  util.py
tests/: conftest.py  regenerate-test-projects.py  test_cli.py  test_importing.py  test_load.py  test_tracebacks.py
tests/installed-projects/filesystem/: module_filesystem.py
tests/installed-projects/filesystem/module_filesystem-1.1.1.dist-info/: METADATA  RECORD  direct_url.json
tests/installed-projects/filesystem/namespace_filesystem_plugin-1.1.1.dist-info/: METADATA  RECORD  direct_url.json
tests/installed-projects/filesystem/package_filesystem/: zero_division.py  あ.py
tests/installed-projects/filesystem/package_filesystem-1.1.1.dist-info/: METADATA  RECORD  direct_url.json
tests/installed-projects/filesystem/package_resources_filesystem/: shift_jis.py
tests/installed-projects/filesystem/package_resources_filesystem-1.1.1.dist-info/: METADATA  RECORD  direct_url.json
tests/installed-projects/sqlite/module_sqlite-2.2.2.dist-info/: METADATA  RECORD  direct_url.json
tests/installed-projects/sqlite/namespace_sqlite/plugin/: __init__.py
tests/installed-projects/sqlite/namespace_sqlite_plugin-2.2.2.dist-info/: METADATA  RECORD  direct_url.json
tests/installed-projects/sqlite/package_resources_sqlite-2.2.2.dist-info/: METADATA  RECORD  direct_url.json
tests/installed-projects/sqlite/package_sqlite-2.2.2.dist-info/: METADATA  RECORD  direct_url.json
tests/source-projects/namespace-package/: README.rst
tests/source-projects/namespace-package/filesystem/: pyproject.toml
tests/source-projects/namespace-package/sqlite/: pyproject.toml
tests/source-projects/package-resources/filesystem/: pyproject.toml
tests/source-projects/package-resources/sqlite/: README.rst  pyproject.toml
tests/source-projects/package/filesystem/: pyproject.toml
tests/source-projects/package/sqlite/: pyproject.toml
tests/source-projects/single-file-module/: README.rst
tests/source-projects/single-file-module/filesystem/: pyproject.toml
tests/source-projects/single-file-module/sqlite/: pyproject.toml
