[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# poetry
# ------

[tool.poetry]
name = "package-resources-sqlite"
version = "2.2.2"
description = ""
authors = ["Kurt McKee <contactme@kurtmckee.org>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.7"
